# deckflow-engine

./: CMakeLists.txt  README.md  build.gradle  settings.gradle
.github/workflows/: android.yml  build.yml
app/: build.gradle  gradlew
app/jni/: Android.mk  android_wrapper.c
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  README.md  native-lib.cpp
app/src/main/java/com/deckflow/engine/: DeckFlowLib.java  NativeLib.java
app/src/main/jni/: Android.mk  Application.mk  NativeMain.c
app/src/main/res/values/: strings.xml
docs/: PHASE1.md
examples/game_demo/: README.md  main.c
examples/phase1_test/: CMakeLists.txt  engine_stub.h  main.c
examples/phase2_sprite/: README.md  main.c
examples/phase3_physics/: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
examples/phase4_demo/: README.md  main.c
examples/phase5_physics/: README.md  main.c
examples/phase6_ui/: README.md  main.c
examples/phase7_animation/: README.md  main.c
src/: deckflow.h
src/animation/: animation.c  animation.h
src/audio/: audio.c  audio.h
src/camera/: camera.c  camera.h
src/core/: engine.c  engine.h
src/input/: input.c  input.h
src/math/: transform2d.c  transform2d.h  vector2.c  vector2.h
src/nodes/: node.c  node.h
src/particle/: particle.c  particle.h
src/physics/: physics.c  physics.h
src/scenes/: scene.c  scene.h  scene_tree.c  scene_tree.h
src/tilemap/: tilemap.c  tilemap.h
src/ui/: ui.c  ui.h
